--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "cloudinary": "^1.40.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "mysql": "github:mysqljs/mysql",
